# InfiniWolf

./: .gitignore  DESIGN.md  GENERATION_FLOW.md  PLAN.md  README.md  ROADMAP.md  ROUND2.md  deep-research-report.md  generate.sh  infiniwolf_cli.py  pyproject.toml  randomwolf_cli.py  run.py
.github/workflows/: release.yml
infiniwolf/: __init__.py  _build.py  build_info.py  cli.py  config.py  generator.py  generator_artifacts.py  generator_validation.py  gui.py  preview.py  runtime.py  watermark.py
packaging/: make_release.py  stamp_build.py
randomwolf/: __init__.py  cli.py  config.py  generator.py  gui.py  paths.py  runtime.py
tests/: __init__.py  test_cli.py  test_config.py  test_documentation.py  test_generator.py  test_gui.py  test_layout_variation.py  test_patrol.py  test_runtime.py  test_topology_regression.py  test_watermark_preview.py
tools/: check_infiniwolf.py  fuzz.py  inspect_map.py  smoke_ecwolf.py
